--- a/client/publish.html
+++ b/client/publish.html
@@ -17,7 +17,10 @@
     </div>
     <script src="scripts/jquery.js"></script>
     <script>
-        var cid = $('#cid'),
+    // ***************************************************************
+    // Needs to be re done
+    // ***************************************************************
+        /*var cid = $('#cid'),
             message = $('#message'),
             buttonPublish = $('#button-publish'),
             successMessage = $('#success');
@@ -43,7 +46,7 @@
                     successMessage.fadeIn(200).delay(500).fadeOut(200);
                 }
             });
-        });
+        });*/
     </script>
 </body>
 </html>
